--- a/person.html
+++ b/person.html
@@ -9,7 +9,7 @@
 <body>
 
     <h3>Sign out from SNS</h3>
-    <p> Sign out via these links or typing it manually on the Address bar.</p>
+    <p> Sign out via these links or doing it manually on the SNS.</p>
 
 
 
