--- a/person.html
+++ b/person.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-<img src="https://goo.gl/images/9DfFp5" alt="hi" class="inline"/>
+<img src="https://goo.gl/images/9DfFp5" class="inline"/>
     <h3>Sign out from SNS</h3>
     <p> Sign out via these links or doing it manually on the SNS.</p>
 
